[package]
name = "currrrl"
version = "0.31337.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
hyper = { version = "0.14.23", features = ["client", "http1", "runtime"] }
hyper-tls = "0.5.0"
tokio = { version = "1.21.2", features = ["full"] }