[package]
name = "currrrl"
version = "0.31337.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
hyper = { version = "0.14.23", features = ["client", "http1", "runtime", "stream"] }
hyper-rustls = "0.23.1"
rustls = { version = "0.20.7", features = ["dangerous_configuration"] }
tokio = { version = "1.21.2", features = ["full"] }
anyhow = "1.0.66"
base64 = "0.13.1"